src/css/sheets/item/item.css
.item-sheet {
  font-family: var(--cpr-font-primary);
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 4.5rem auto;
  grid-template-areas:
    "item-top-pane"
    "item-bottom-pane";
  gap: 0.313rem;

  .item-top-pane {
    grid-area: item-top-pane;
    display: grid;
    grid-auto-columns: 1fr;
    grid-auto-rows: 1fr;
    grid-template-columns: 3.875rem 1fr;
    grid-template-rows: 3.875rem;
    gap: 0.313rem;
    padding: 0.313rem;
    grid-template-areas: "item-image item-details";
    width: auto;
    height: auto;
    background-color: var(--cpr-background-border);

    /* If the item has an upgrade icon, show it on the top right corner */
    .item-image {
      position: relative;
      grid-area: item-image;
      overflow: hidden;

      i.fa-square-caret-up {
        position: absolute;
        top: 0.5rem;
        right: 0.2rem;
        color: var(--cpr-color-white);
      }

      i.fa-circle-info {
        position: absolute;
        top: 0.5rem;
        left: 0.17rem;
        color: var(--cpr-color-white);
      }

      img {
        width: 100%;
      }
    }

    .item-details {
      grid-area: item-details;
      display: grid;
      grid-auto-columns: auto 6.5rem;
      grid-auto-rows: auto 1fr 1fr;
      grid-template-areas:
        "item-details-name item-details-help"
        "item-details-name item-details-source"
        "item-details-info item-details-other";
      width: auto;
      height: auto;
      background-color: var(--cpr-background-box);

      .item-details-name {
        grid-area: item-details-name;
        display: grid;
        justify-content: left;
        align-content: start;
        padding: 0 0.118rem;
        overflow: hidden;
        white-space: nowrap;
      }

      .item-details-info {
        grid-area: item-details-info;
        display: grid;
        justify-content: left;
        align-content: center;
        padding: 0 0.125rem;
        margin-bottom: 0.125rem;
      }

      .item-details-help {
        grid-area: item-details-help;
        display: flex;
        justify-content: right;
        align-content: center;
        padding: 0 0.118rem;
      }

      .item-details-source {
        grid-area: item-details-source;
        display: grid;
        justify-content: right;
        align-content: center;
        padding: 0 0.118rem;
      }

      .item-details-other {
        grid-area: item-details-other;
        display: grid;
        justify-content: right;
        align-content: center;
        padding: 0 0.118rem;
      }
    }
  }

  .tab-label {
    height: 1.125rem;
  }

  .item-bottom-pane {
    display: grid;
    grid-area: item-bottom-pane;
    grid-template-columns: auto;
    grid-template-rows: 1.125rem auto;
    grid-template-areas:
      "item-bottom-tabs"
      "item-bottom-content";
    height: 100%;
    overflow-y: hidden;

    .item-bottom-tabs-section {
      grid-area: item-bottom-tabs;
      background-color: var(--cpr-background-window);
    }

    .item-bottom-content-section {
      grid-area: item-bottom-content;
      border-style: solid;
      border-width: 0.313rem;
      overflow-y: hidden;
      border-color: var(--cpr-background-border);
    }
  }

  .fa-trash-can {
    color: var(--cpr-text-icon-highlight);
  }
}

.item-description-grid.active,
.item-settings-grid.active,
.item-effects-grid.active {
  width: inherit;
  height: 100%;

  .setting-value {
    justify-content: right;
  }
}

.item-description-tab {
  display: grid;
  grid-template-columns: 8.438rem auto;
  grid-template-rows: auto;
  grid-template-areas: "item-summary-pane item-description-pane";
  gap: 0.313rem;
  background-color: var(--cpr-background-border);
  flex: 1 0 auto;
  height: 100%;
  width: inherit;

  .item-summary-section {
    grid-area: item-summary-pane;
    height: unset;
    min-width: 8.438rem;
    padding: 0.125rem;
    background-color: var(--cpr-background-box);

    .summary-name,
    .item-summary-line {
      display: flex;
      justify-content: space-between;
    }

    .summary-value {
      align-self: center;
    }
  }

  .item-description-section {
    grid-area: item-description-pane;
    display: flex;
    flex: 1 0 auto;
    flex-wrap: wrap;
    height: unset;
    background-color: var(--cpr-background-box);
  }
}

.item-settings-tab,
.item-effects-tab {
  display: flex;
  width: auto;
  flex: 1;
  background-color: var(--cpr-background-box);

  .item-settings-section,
  .item-effects-section {
    display: list-item;
    flex: 1;
  }
}

.item-image-block {
  .item-image-block-img {
    height: 3.875rem;
    width: 3.875rem;
    clip-path: polygon(0.938rem 0, 100% 0, 100% 100%, 0 100%, 0 0.938rem);
    object-fit: contain;
  }
}

.item-netarch-section {
  padding-top: 0.313rem;
}

.item-netarch-grid {
  display: grid;
  grid-template-columns: 1.875rem 1.875rem 1fr 5rem;
  grid-template-areas: "netarch-level netarch-dv netarch-content netarch-actions";
  gap: 0.25rem;
}

.netarch-level {
  grid-area: netarch-level;
  flex: 0 0 1.875rem;
  text-align: center;
}

.netarch-dv {
  grid-area: netarch-dv;
  flex: 0 0 1.875rem;
  text-align: center;
}

.netarch-content {
  grid-area: netarch-content;
}

.netarch-actions {
  grid-area: netarch-actions;
  flex: 0 0 5rem;
  text-align: end;
}

.item-role-section {
  padding-top: 0.313rem;
}

.help-article,
.help-article:link,
.help-article:hover,
.help-article:visited,
.help-article:focus,
.help-article:active {
  text-decoration: none;
  color: inherit;
}

